--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile 'org.lwjgl:lwjgl:3.0.0b'
     compile 'org.lwjgl:lwjgl:3.0.0b'
 }
