--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile 'org.lwjgl:lwjgl:3.0.0b'
     compile 'org.lwjgl:lwjgl:3.0.0b'
+    compile 'org.json:json:20160212'
 }
