Added a glGetError in main loop, should catch errors at runtime and terminate if they arise Migrated to JOML for matrix handling CoordSystem now works correctly Termination now works correctly if an Exception is thrown in the rendering thread

--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     testCompile 'org.lwjgl:lwjgl:3.0.0b'
     compile 'org.lwjgl:lwjgl:3.0.0b'
     compile 'org.json:json:20160212'
+    compile 'org.joml:joml:1.7.1'
 }
